Closed Bug 199567 Opened 21 years ago Closed 21 years ago

-disable-oji breaks NPAPI funtion table order

Categories

(Core Graveyard :: Plug-ins, defect)

defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.4alpha

People

(Reporter: peterlubczynski-bugs, Assigned: netscape)

References

()

Details

Attachments

(1 file)

The recent checkin to npupp.h to adds a bunch of #ifdef OJI's for diabling OJI
but breaks the order of the following setValue and getValue functions. Plugin
vendors that forget to define OJI will break.
Flags: blocking1.4a?
Breaks the ordering in what sense?  
Assignee: cls → seawood
The offsets of getvalue and setvalue, and everything after getJavaPeer, change
depending on whether OJI is defined. The layout of these tables *has* to remain
fixed, irrespective of the OJI setting.
Attachment #118730 - Flags: superreview+
Attachment #118730 - Flags: review?(peterl)
Attachment #118730 - Flags: review?(peterl) → review+
Comment on attachment 118730 [details] [diff] [review]
Revert npupp.h changes

requesting approval for 1.4a: this change is needed for plugin vendor to
develop compatible plugins with this header file
Comment on attachment 118730 [details] [diff] [review]
Revert npupp.h changes

requesting approval for 1.4a: this change is needed for plugin vendor to
develop compatible plugins with this header file
Attachment #118730 - Flags: approval1.4a?
Comment on attachment 118730 [details] [diff] [review]
Revert npupp.h changes

a=asa (on behalf of drivers) for checkin to 1.4a but time is short so please
get this landed ASAP. Thanks.
Attachment #118730 - Flags: approval1.4a? → approval1.4a+
Patch has been checked in.
Status: NEW → RESOLVED
Closed: 21 years ago
Flags: blocking1.4a?
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.4alpha
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: