The plugin function table must remain the same regardless of build configuration. Bug #199567 r=peterl sr=sfraser a=asa